src/components/layout.css
@font-face {
  font-family: 'Object Sans';
  src: url('fonts/objectsans-bold-webfont.woff2') format('woff2'),
       url('fonts/objectsans-bold-webfont.woff') format('woff');
  font-weight: 700;
  font-style: normal;
}
@font-face {
  font-family: 'Object Sans';
  src: url('fonts/objectsans-regular-webfont.woff2') format('woff2'),
       url('fonts/objectsans-regular-webfont.woff') format('woff');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Object Sans';
  src: url('fonts/objectsans-heavy-webfont.woff2') format('woff2'),
       url('fonts/objectsans-heavy-webfont.woff') format('woff');
  font-weight: 900;
  font-style: normal;
}

@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');

.source-code-pro {
  font-family: "Source Code Pro", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

/* @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap'); */


/* Global */

html {
  font-family: 'Object Sans', sans-serif;

  /* --red: #F52D2D; */
  --red: #ED4934;
  --orange: #FF8559;
  --orange-light: hsl(27, 100%, 80%);
  --blue: #1B9393;
  --blue-light: hsl(180, 75%, 80%);
  --bg-color: white;
  --bg-color2: #FDFCF8;

  --transparent-frost: rgba(255, 255, 255, 0.7);

  --gray: hsl(180, 6%, 50%);
  --near-black: hsl(180, 15%, 25%);
  --dark-gray: hsl(180, 20%, 25%);
  --silver: #999;
  --light-gray: #eee;

  /* easeOutQuart */
  /* --global-easing: cubic-bezier(0.25, 1, 0.5, 1); */
  
  /* easeOutQuint */
  --global-easing: cubic-bezier(0.22, 1, 0.36, 1); 
}


/* Animations */

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes slideUp {
  from { 
    transform: translateY(50px);
    opacity: 0;
  }
  
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
.slideUp {
  animation-name: slideUp;
  animation-timing-function: var(--global-easing);
}

@keyframes slideDownWithDelay {
  0%, 20% {
    transform: translateY(-5px);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}
.slideDownWithDelay {
  animation-name: slideDownWithDelay;
  animation-timing-function: var(--global-easing);
}

@keyframes slideDown {
  from { 
    transform: translateY(-5px);
    opacity: 0;
  }
  
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
.slideDown {
  animation-name: slideDown;
  animation-timing-function: var(--global-easing);
}

@keyframes clipIn {
  from { 
    clip-path: inset(0 0 100% 0);
    opacity: .2;
  }
  
  to {
    clip-path: inset(0);
    opacity: 1;
  }
}
.clipIn {
  animation-name: clipIn;
  animation-timing-function: var(--global-easing);
}

@keyframes animatedGradient {
  0%{background-position:0% 0%}
  100%{background-position: 100% 0%}
}

@keyframes OutlineGlow {
  0%   { outline-color: transparent; }
  50%  { outline-color: #EAEAEA; }
  100% { outline-color: transparent; }
}



/* Styles */

.layoutMaxWidth {
  max-width: 1280px;
}
 
body {
  background: var(--bg-color);
  /* border: 1rem solid white; */
  /* min-height: 100vh; */
}

#header {
  left: 4rem;
  right: 4rem;
}

/* Cool grid on hover effect */
/* @media (min-width: 30.1em) {
  * {
    outline: 1px solid transparent;
    transition: outline-color 300ms ease-out; 
  }
  *:hover {
    outline-color: var(--light-gray);
    animation:    600ms ease-out;
  }
} */

/* Prevent flash of unstyled content before animations load */
@media (min-width: 30.01em) {
  .react-reveal {
    opacity: 0;
  }
}

/* Mobile */
@media (max-width: 30em) {
  .react-reveal {
    animation: none !important;
    opacity: 1 !important;
  }

  #header {
    left: 1rem;
    right: 1rem;
  }
}

body .bg-transparent-frost { background-color: var(--transparent-frost) !important }

.pretty-link {
  color: inherit;

  box-shadow: inset 0 0 0 0px var(--dark-gray);
  text-decoration: underline dotted var(--gray);
  
  transition: box-shadow 200ms var(--global-easing);
} 
.pretty-link:hover {
  /* background-color: var(--silver); */
  box-shadow: inset 0 -1.2em 0 0px var(--dark-gray);
  text-decoration: none;
  color: var(--light-gray);
}

figure a,
figure a.pretty-link {
  box-shadow: none;
  cursor: zoom-in;
}
figure a,
figure a.pretty-link:hover {
  box-shadow: none;
}

/* Weird stuff I have to do because Remark nests figures inside figures */
figure figure {
  margin: 0 !important;
  width: 100% !important;
}

ul li {
  list-style-type: none;
  position: relative;
}
ul li::before {
  content: '∙';
  position: absolute;
  left: -1em;
  font-size: 1em;
}
ul li p {
  width: auto !important;
}

ol {
  list-style-type: none;
  position: relative;
  counter-reset: list-number;
}

ol li {
  position: relative;
}

ol li:before {
  counter-increment: list-number;
  content: counter(list-number);
  
  position: absolute;
  left: -2em;
  top: 0.7em;
  
  /* vertical-align: middle; */
  /* margin-right: .5em; */

  width: 1.5em;
  height: 1.5em;
  font-size: .5em;
  display: inline-flex;
  align-items: center;
  justify-content:  center;
  background-color: var(--dark-gray);
  border-radius: 50%;
  color: var(--bg-color);
}

.tab {
  position: relative;
  text-decoration: none;
  background-color: var(--transparent-frost);
  backdrop-filter: blur(12px);
}
.tab:before {
  content: '・';
  position: absolute;
  top: -1.6rem;
  left: calc(50% - 1rem);
  font-size: 2rem;
  color: var(--gray);
  opacity: 0;
}
.tab--unselected {
  color: var(--gray);
  /* opacity: .6; */
}
.tab--unselected:hover:before { 
  opacity: 1;
  animation: slideDown .8s var(--global-easing)
}
.tab--selected {
  color: var(--near-black);
  /* opacity: 1; */
}
.tab--selected:before {
  /* color: var(--blue); */
  color: var(--orange); 
  opacity: 1;
  animation: slideDown .8s var(--global-easing)
}

.dim {
  transition: opacity .3s var(--global-easing) !important;
} 
.dim:focus,.dim:hover {
  opacity: .6 !important;
}
/* ... */

